server-client working, with updates